# origin

1. Enumeration, structures/1. Months/: Months.sln  Months.vcxproj
1. Enumeration, structures/2. Счета/: Bank_accounts.vcxproj
1. Enumeration, structures/3. Вывод структуры/: Structure_output.cpp  Structure_output.sln  Structure_output.vcxproj.filters
10. Libraries/Task 1/: Greeting.sln
10. Libraries/Task 2/: Bye.sln
10. Libraries/Task 3/: .gitignore  CMakeLists.txt  Leaver.cpp  Leaver.h  main.cpp
11. Compilation and linking/: Task 1.sln
11. Compilation and linking/Task 1/: Task 1.vcxproj
12. RAII/Task 1/: Task 1.sln
12. RAII/Task 2/: Task 2.sln
13. Testing/Task 1/: main.cpp
13. Testing/Task 2/: main.cpp
14. Templates and functors/Task 1/: .gitignore  Task 1.sln
14. Templates and functors/Task 2/: Task 2.sln
14. Templates and functors/Task 3/: Task 3.sln
15. STL (part 1)/Task 1/: Task 1.sln
15. STL (part 1)/Task 2/: Task 2.sln
16. STL (part 2)/Task 1/: Task 1.sln
16. STL (part 2)/Task 2/: Task 2.sln
17. Smart pointers/Task 1/: Task 1.sln
17. Smart pointers/Task 2/: Task 2.sln
17. Smart pointers/Task 3/: Task 3.sln
2. Classes/1. Calculator/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj
2. Classes/2. Counter/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj
3. OOP - abstraction, incapsulation/Sorting/: in.txt  (+4 more)
9. CMake/Task 2/: CMakeLists.txt  FIgure.cpp  IsoscelesTriangle.h  Parallelogram.h  Quad.h  Rhombus.cpp  Rhombus.h  RightTriangle.cpp  Square.cpp  Square.h
(+216 files in other folders)
