cmake_minimum_required(VERSION 3.22.0)
project(Task2)
add_executable(Task2 Task3.cpp Eq_triangle.cpp Eq_triangle.h Figure.cpp Figure.h IsoscelesTriangle.cpp IsoscelesTriangle.h Parallelogram.cpp Parallelogram.h Quad.cpp Quad.h Rectangle.cpp Rectangle.h Rhombus.cpp Rhombus.h RightTriangle.cpp RightTriangle.h Square.cpp Square.h Triangle.cpp Triangle.h)